k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sample-app-prod
  namespace: prod  

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sample-app-prod

  template:
    metadata:
      labels:
        app: sample-app-prod

    spec:
      containers:
      - name: sample-app-prod
        image: node:20-alpine

        command:
        - sh
        - -c

        args:
        - |
          apk add --no-cache git npm
          git clone https://github.com/github1001/devops-lab.git /app
          cd /app
          git checkout main
          npm install
          npm start

        ports:
        - containerPort: 3000
