k8s/prod/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-app-prod
  namespace: prod  

spec:
  selector:
    app: sample-app-prod

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31013

  type: NodePort
