k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app-prod
  namespace: prod

spec:
  ingressClassName: traefik

  rules:
  - host: app.sample-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-prod
            port:
              number: 3000
